--- a/Immobilienverwaltung/MainWindow.xaml
+++ b/Immobilienverwaltung/MainWindow.xaml
@@ -11,9 +11,146 @@
         Height="450"
         DataContext="{Binding MainViewModel}"
         mc:Ignorable="d">
-    <Window.Resources />
-    <Grid>
-        <ContentControl regions:RegionManager.RegionName="MainContext" />
+    <Window.Resources>
+        <ResourceDictionary>
+            <Style x:Key="RoundCorner"
+                   TargetType="{x:Type Button}">
+                <Setter Property="HorizontalContentAlignment" Value="Center" />
+                <Setter Property="VerticalContentAlignment" Value="Center" />
+                <Setter Property="Padding" Value="1" />
+                <Setter Property="BorderBrush" Value="BlueViolet" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Grid x:Name="grid">
+                                <Border x:Name="border"
+                                        CornerRadius="5"
+                                        BorderBrush="Black"
+                                        BorderThickness="2">
+                                    <Border.Background>
+                                        <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                            <GradientStop Offset="0.0" Color="White" />
+                                            <GradientStop Offset="0.5" Color="{TemplateBinding BorderBrush}" />
+                                        </LinearGradientBrush>
+                                    </Border.Background>
+                                    <ContentPresenter HorizontalAlignment="Center"
+                                                      VerticalAlignment="Center"
+                                                      TextElement.FontWeight="Bold" />
+                                </Border>
+
+                            </Grid>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsPressed" Value="True">
+                                    <Setter TargetName="border" Property="Background">
+                                        <Setter.Value>
+                                            <RadialGradientBrush GradientOrigin="0.496,1.052">
+                                                <RadialGradientBrush.RelativeTransform>
+                                                    <TransformGroup>
+                                                        <ScaleTransform CenterX="0.5"
+                                                                        CenterY="0.5"
+                                                                        ScaleX="1.5"
+                                                                        ScaleY="1.5" />
+                                                        <TranslateTransform X="0.02" Y="0.3" />
+                                                    </TransformGroup>
+                                                </RadialGradientBrush.RelativeTransform>
+                                                <GradientStop Offset="1" Color="#00000000" />
+                                                <GradientStop Offset="0.3" Color="#FF505050" />
+                                            </RadialGradientBrush>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Trigger>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter TargetName="border" Property="BorderBrush" Value="#FF33962B" />
+                                </Trigger>
+                                <Trigger Property="IsEnabled" Value="False">
+                                    <Setter TargetName="grid" Property="Opacity" Value="0.25" />
+                                </Trigger>
+
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+        </ResourceDictionary>
+    </Window.Resources>
+    <Grid HorizontalAlignment="Center"
+          VerticalAlignment="Center">
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Button x:Name="Stammdaten"
+                Grid.Row="0"
+                Grid.Column="0"
+                Width="120"
+                Margin="1"
+                HorizontalContentAlignment="Stretch"
+                Click="OnStammdatenClick"
+                Tag="{DynamicResource {x:Static SystemColors.ActiveCaptionTextBrushKey}}"
+                Style="{DynamicResource RoundCorner}"
+                BorderBrush="Aquamarine">
+            <Grid HorizontalAlignment="Stretch"
+                  VerticalAlignment="Stretch">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Image Height="60"
+                       Margin="0,10,0,0"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center">
+                    <Image.Source>
+                        <BitmapImage CacheOption="OnDemand"
+                                     CreateOptions="IgnoreColorProfile"
+                                     UriSource="pack://application:,,,/Images;component/Images/Pictures/stammdaten.png" />
+                    </Image.Source>
+                </Image>
+                <Label Grid.Row="1"
+                       Margin="10"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Bottom"
+                       Content="Stammdaten"
+                       Foreground="Black" />
+            </Grid>
+        </Button>
+        <Button x:Name="NeuerMieter"
+                Grid.Row="0"
+                Grid.Column="1"
+                Width="120"
+                Margin="1"
+                HorizontalContentAlignment="Stretch"
+                Click="OnNeuerMieterClick"
+                Tag="{DynamicResource {x:Static SystemColors.ActiveCaptionTextBrushKey}}"
+                Style="{DynamicResource RoundCorner}"
+                BorderBrush="Aquamarine">
+            <Grid HorizontalAlignment="Stretch"
+                  VerticalAlignment="Stretch">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Image Height="60"
+                       Margin="0,10,0,0"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center">
+                    <Image.Source>
+                        <BitmapImage CacheOption="OnDemand"
+                                     CreateOptions="IgnoreColorProfile"
+                                     UriSource="pack://application:,,,/Images;component/Images/Pictures/stammdaten.png" />
+                    </Image.Source>
+                </Image>
+                <Label Grid.Row="1"
+                       Margin="10"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Bottom"
+                       Content="Neues Mietverhältnis"
+                       Foreground="Black" />
+            </Grid>
+        </Button>
     </Grid>
 </Window>
 
