--- a/Themes/Generic.xaml
+++ b/Themes/Generic.xaml
@@ -1,10 +1,38 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<ResourceDictionary x:Class="Themes.Generic"
+                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:system="clr-namespace:System;assembly=mscorlib">
+                    xmlns:system="clr-namespace:System;assembly=mscorlib"
+                    xmlns:helper="clr-namespace:Common.Helper;assembly=Common"
+                    xmlns:converter="clr-namespace:Common.Converter;assembly=Common">
     <ResourceDictionary.MergedDictionaries />
+
+    <converter:AmountTextBoxCharacters x:Key="AmountTextBoxCharacters" />
+
+    <SolidColorBrush x:Key="IVGlass"
+                     Opacity="0.8"
+                     Color="{StaticResource {x:Static SystemColors.WindowColorKey}}" />
     <Style TargetType="Label">
         <Setter Property="Margin" Value="5" />
     </Style>
+
+    <ToolTip x:Key="availablecharactersToolTip" x:Name="TooltipMaxLength"
+             Padding="3,1"
+             AutomationProperties.AutomationId="General_Style_ToolTip_279844045386215"
+             Background="{DynamicResource IVGlass}"
+             BorderBrush="Transparent"
+             ContentStringFormat="{}Noch {0} Zeichen"
+             DataContext="{Binding Path=PlacementTarget, RelativeSource={RelativeSource Self}}"
+             Foreground="{Binding Tag, RelativeSource={RelativeSource Self}}"
+             Placement="Bottom"
+             StaysOpen="True">
+        <ToolTip.Content>
+            <MultiBinding Converter="{StaticResource AmountTextBoxCharacters}">
+                <Binding Path="Text" />
+                <Binding Mode="OneWay"
+                         Path="MaxLength" />
+            </MultiBinding>
+        </ToolTip.Content>
+    </ToolTip>
 
     <Style x:Key="InputTextBox"
            BasedOn="{StaticResource {x:Type TextBox}}"
@@ -13,7 +41,6 @@
         <Setter Property="Margin" Value="5" />
         <Setter Property="Padding" Value="6,3,5,3" />
         <Setter Property="TextWrapping" Value="Wrap" />
-        <Setter Property="Text" Value="{Binding Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
         <Setter Property="AutomationProperties.Name">
             <Setter.Value>
                 <PriorityBinding>
@@ -22,28 +49,8 @@
                 </PriorityBinding>
             </Setter.Value>
         </Setter>
-        <Setter Property="IsReadOnly" Value="{Binding IsReadOnly}" />
-        <Setter Property="MaxLength" Value="{Binding MaxLength}" />
-
-        <Style.Triggers>
-            <Trigger Property="IsReadOnly" Value="False">
-                <Setter Property="ToolTip">
-                    <Setter.Value>
-                        <TextBlock Text="{Binding MaxLength, StringFormat={}\{0\} Zeichen verfügbar}" />
-                    </Setter.Value>
-                </Setter>
-            </Trigger>
-            <DataTrigger Binding="{Binding IsObligatory}" Value="True">
-                <Setter Property="ToolTip">
-                    <Setter.Value>
-                        <TextBlock Text="{Binding MaxLength, StringFormat='{}Pflichtfeld {0} Zeichen verfügbar'}" />
-                    </Setter.Value>
-                </Setter>
-            </DataTrigger>
-            <Trigger Property="Validation.HasError" Value="True">
-                <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Self}, Path=(Validation.Errors)[0].ErrorContent}" />
-            </Trigger>
-        </Style.Triggers>
+        <Setter Property="helper:AvailableCharactersToolTip.IsAvaibleCharactersTooltip" Value="True" />
+        <Setter Property="helper:AvailableCharactersToolTip.SpecialToolTip" Value="{StaticResource availablecharactersToolTip}" />
     </Style>
 
     <Style x:Key="InputComboBox"
